# Image_Recognition_sample

./: .gitignore  LoG_filter.c  LoG_filter.h  Makefile  Makefile.am  autogen.sh  average_filter.c  average_filter.h  bilateral_filter.c  bitmap.c  bitmap.h  canny_edge_detector.h  common.c  common.h  configure.ac  crc.c  crc.h  gaussian_filter.h  main.c  png.c  png.h  prewitt_filter.c  prewitt_filter.h  sobel_filter.h
src/: LoG_filter.c  Makefile.am  average_filter.c  average_filter.h  bilateral_filter.h  bitmap.c  canny_edge_detector.c  common.c  common.h  gaussian_filter.c  gif.c  gif.h  main.c  png.c  png.h  prewitt_filter.c  sobel_filter.c  stack.c
test/: Makefile.am  run-test.sh  test-decoder.c  test-stack.c  verify_png.sh
